Assign5/asgn5_21CS10005_21CS30031.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    INVALID_TOKEN
    ADD_ASSIGN
    HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | LITERAL
    4                   | PARANTHESIS_OPEN expression PARANTHESIS_CLOSE

    5 constant: CONSTANT_INT
    6         | CONSTANT_FLOAT
    7         | CONSTANT_CHAR

    8 postfix_expression: primary_expression
    9                   | postfix_expression SQ_BRACKET_OPEN expression SQ_BRACKET_CLOSE
   10                   | postfix_expression PARANTHESIS_OPEN argument_expression_list_opt PARANTHESIS_CLOSE
   11                   | postfix_expression PERIOD IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   16                   | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   17 argument_expression_list_opt: argument_expression_list
   18                             | ε

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE

   27 unary_operator: AMPERSAND
   28               | ASTERISK
   29               | PLUS
   30               | MINUS
   31               | TILDE
   32               | EXCLAMATION

   33 cast_expression: unary_expression
   34                | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression ASTERISK cast_expression
   37                          | multiplicative_expression SLASH cast_expression
   38                          | multiplicative_expression PERCENT cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_SHIFT additive_expression
   44                 | shift_expression RIGHT_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LESS_THAN shift_expression
   47                      | relational_expression GREATER_THAN shift_expression
   48                      | relational_expression LESS_THAN_EQUAL shift_expression
   49                      | relational_expression GREATER_THAN_EQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUAL relational_expression
   52                    | equality_expression NOT_EQUAL relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression AMPERSAND equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression CARET AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression PIPE exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression N QUESTION M expression N COLON M conditional_expression

   65 M: ε

   66 N: ε

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: ASSIGN
   70                    | MULTIPLY_ASSIGN
   71                    | DIVIDE_ASSIGN
   72                    | MOD_ASSIGN
   73                    | PLUS_ASSIGN
   74                    | MINUS_ASSIGN
   75                    | LEFT_SHIFT_ASSIGN
   76                    | RIGHT_SHIFT_ASSIGN
   77                    | AND_ASSIGN
   78                    | XOR_ASSIGN
   79                    | OR_ASSIGN

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list SEMICOLON
   84            | declaration_specifiers SEMICOLON

   85 declaration_specifiers: storage_class_specifier declaration_specifiers
   86                       | storage_class_specifier
   87                       | type_specifier declaration_specifiers
   88                       | type_specifier
   89                       | type_qualifier declaration_specifiers
   90                       | type_qualifier
   91                       | function_specifier declaration_specifiers
   92                       | function_specifier

   93 init_declarator_list: init_declarator_list COMMA init_declarator
   94                     | init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | STATIC
   99                        | AUTO
  100                        | REGISTER

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | DOUBLE
  108               | SIGNED
  109               | UNSIGNED
  110               | BOOL
  111               | COMPLEX
  112               | IMAGINARY
  113               | enum_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: specifier_qualifier_list
  117                             | ε

  118 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  119               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  120               | ENUM IDENTIFIER

  121 identifier_opt: IDENTIFIER
  122               | ε

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER ASSIGN constant_expression

  127 type_qualifier: CONST
  128               | RESTRICT
  129               | VOLATILE

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | PARANTHESIS_OPEN declarator PARANTHESIS_CLOSE
  135                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list assignment_expression SQ_BRACKET_CLOSE
  136                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list SQ_BRACKET_CLOSE
  137                  | direct_declarator SQ_BRACKET_OPEN assignment_expression SQ_BRACKET_CLOSE
  138                  | direct_declarator SQ_BRACKET_OPEN SQ_BRACKET_CLOSE
  139                  | direct_declarator SQ_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQ_BRACKET_CLOSE
  140                  | direct_declarator SQ_BRACKET_OPEN STATIC assignment_expression SQ_BRACKET_CLOSE
  141                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQ_BRACKET_CLOSE
  142                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list ASTERISK SQ_BRACKET_CLOSE
  143                  | direct_declarator SQ_BRACKET_OPEN ASTERISK SQ_BRACKET_CLOSE
  144                  | direct_declarator PARANTHESIS_OPEN change_table parameter_type_list PARANTHESIS_CLOSE
  145                  | direct_declarator PARANTHESIS_OPEN identifier_list PARANTHESIS_CLOSE
  146                  | direct_declarator PARANTHESIS_OPEN change_table PARANTHESIS_CLOSE

  147 type_qualifier_list_opt: type_qualifier_list
  148                        | ε

  149 pointer: ASTERISK type_qualifier_list_opt
  150        | ASTERISK type_qualifier_list_opt pointer

  151 type_qualifier_list: type_qualifier
  152                    | type_qualifier_list type_qualifier

  153 parameter_type_list: parameter_list
  154                    | parameter_list COMMA ELLIPSIS

  155 parameter_list: parameter_declaration
  156               | parameter_list COMMA parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers

  159 identifier_list: IDENTIFIER
  160                | identifier_list COMMA IDENTIFIER

  161 type_name: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  164            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  165 initializer_list: designation_opt initializer
  166                 | initializer_list COMMA designation_opt initializer

  167 designation_opt: designation
  168                | ε

  169 designation: designator_list ASSIGN

  170 designator_list: designator
  171                | designator_list designator

  172 designator: SQ_BRACKET_OPEN constant_expression SQ_BRACKET_CLOSE
  173           | PERIOD IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 loop_statement: labeled_statement
  181               | expression_statement
  182               | selection_statement
  183               | iteration_statement
  184               | jump_statement

  185 labeled_statement: IDENTIFIER COLON statement
  186                  | CASE constant_expression COLON statement
  187                  | DEFAULT COLON statement

  188 compound_statement: CURLY_BRACKET_OPEN X change_table block_item_list_opt CURLY_BRACKET_CLOSE

  189 block_item_list_opt: block_item_list
  190                    | ε

  191 block_item_list: block_item
  192                | block_item_list M block_item

  193 block_item: declaration
  194           | statement

  195 expression_statement: expression SEMICOLON
  196                     | SEMICOLON

  197 selection_statement: IF PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE M statement N
  198                    | IF PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE M statement N ELSE M statement
  199                    | SWITCH PARANTHESIS_OPEN expression PARANTHESIS_CLOSE statement

  200 iteration_statement: WHILE W PARANTHESIS_OPEN X change_table M expression PARANTHESIS_CLOSE M loop_statement
  201                    | WHILE W PARANTHESIS_OPEN X change_table M expression PARANTHESIS_CLOSE CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE
  202                    | DO D M loop_statement M WHILE PARANTHESIS_OPEN expression PARANTHESIS_CLOSE SEMICOLON
  203                    | DO D CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE M WHILE PARANTHESIS_OPEN expression PARANTHESIS_CLOSE SEMICOLON
  204                    | FOR F PARANTHESIS_OPEN X change_table declaration M expression_statement M expression N PARANTHESIS_CLOSE M loop_statement
  205                    | FOR F PARANTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARANTHESIS_CLOSE M loop_statement
  206                    | FOR F PARANTHESIS_OPEN X change_table declaration M expression_statement M expression N PARANTHESIS_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  207                    | FOR F PARANTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARANTHESIS_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  208 F: ε

  209 W: ε

  210 D: ε

  211 X: ε

  212 change_table: ε

  213 jump_statement: GOTO IDENTIFIER SEMICOLON
  214               | CONTINUE SEMICOLON
  215               | BREAK SEMICOLON
  216               | RETURN expression SEMICOLON
  217               | RETURN SEMICOLON

  218 translation_unit: external_declaration
  219                 | translation_unit external_declaration

  220 external_declaration: function_definition
  221                     | declaration

  222 function_definition: declaration_specifiers declarator declaration_list_opt change_table CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  223 declaration_list_opt: declaration_list
  224                     | ε

  225 declaration_list: declaration
  226                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 99
    ENUM (259) 118 119 120
    RESTRICT (260) 128
    UNSIGNED (261) 109
    BREAK (262) 215
    EXTERN (263) 97
    RETURN (264) 216 217
    VOID (265) 101
    CASE (266) 186
    FLOAT (267) 106
    SHORT (268) 103
    VOLATILE (269) 129
    CHAR (270) 102
    FOR (271) 204 205 206 207
    SIGNED (272) 108
    WHILE (273) 200 201 202 203
    CONST (274) 127
    GOTO (275) 213
    SIZEOF (276) 25 26
    BOOL (277) 110
    CONTINUE (278) 214
    IF (279) 197 198
    STATIC (280) 98 139 140 141
    COMPLEX (281) 111
    DEFAULT (282) 187
    INLINE (283) 130
    STRUCT (284)
    IMAGINARY (285) 112
    DO (286) 202 203
    INT (287) 104
    SWITCH (288) 199
    DOUBLE (289) 107
    LONG (290) 105
    TYPEDEF (291)
    ELSE (292) 198
    REGISTER (293) 100
    UNION (294)
    INVALID_TOKEN (295)
    PARANTHESIS_OPEN (296) 4 10 15 16 26 34 134 144 145 146 197 198 199 200 201 202 203 204 205 206 207
    PARANTHESIS_CLOSE (297) 4 10 15 16 26 34 134 144 145 146 197 198 199 200 201 202 203 204 205 206 207
    SQ_BRACKET_OPEN (298) 9 135 136 137 138 139 140 141 142 143 172
    SQ_BRACKET_CLOSE (299) 9 135 136 137 138 139 140 141 142 143 172
    CURLY_BRACKET_OPEN (300) 15 16 118 119 163 164 188 201 203 206 207 222
    CURLY_BRACKET_CLOSE (301) 15 16 118 119 163 164 188 201 203 206 207 222
    PERIOD (302) 11 173
    ARROW (303) 12
    INCREMENT (304) 13 22
    DECREMENT (305) 14 23
    AMPERSAND (306) 27 54
    ASTERISK (307) 28 36 142 143 149 150
    PLUS (308) 29 40
    MINUS (309) 30 41
    TILDE (310) 31
    EXCLAMATION (311) 32
    SLASH (312) 37
    PERCENT (313) 38
    LEFT_SHIFT (314) 43
    RIGHT_SHIFT (315) 44
    LESS_THAN (316) 46
    GREATER_THAN (317) 47
    LESS_THAN_EQUAL (318) 48
    GREATER_THAN_EQUAL (319) 49
    EQUAL (320) 51
    NOT_EQUAL (321) 52
    CARET (322) 56
    PIPE (323) 58
    LOGICAL_AND (324) 60
    LOGICAL_OR (325) 62
    QUESTION (326) 64
    COLON (327) 64 185 186 187
    SEMICOLON (328) 83 84 195 196 202 203 213 214 215 216 217
    ELLIPSIS (329) 154
    ASSIGN (330) 69 96 126 169
    MULTIPLY_ASSIGN (331) 70
    DIVIDE_ASSIGN (332) 71
    MOD_ASSIGN (333) 72
    PLUS_ASSIGN (334) 73
    MINUS_ASSIGN (335) 74
    LEFT_SHIFT_ASSIGN (336) 75
    RIGHT_SHIFT_ASSIGN (337) 76
    AND_ASSIGN (338) 77
    ADD_ASSIGN (339)
    XOR_ASSIGN (340) 78
    OR_ASSIGN (341) 79
    COMMA (342) 16 20 81 93 119 124 154 156 160 164 166
    HASH (343)
    IDENTIFIER <symb> (344) 1 11 12 120 121 125 126 133 159 160 173 185 213
    CONSTANT_INT <iValue> (345) 5
    CONSTANT_FLOAT <sValue> (346) 6
    CONSTANT_CHAR <sValue> (347) 7
    LITERAL <sValue> (348) 3
    THEN (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    primary_expression <expr> (96)
        on left: 1 2 3 4
        on right: 8
    constant <symb> (97)
        on left: 5 6 7
        on right: 2
    postfix_expression <arr> (98)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 9 10 11 12 13 14 21
    argument_expression_list_opt <param_count> (99)
        on left: 17 18
        on right: 10
    argument_expression_list <param_count> (100)
        on left: 19 20
        on right: 17 20
    unary_expression <arr> (101)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 68
    unary_operator <unary_op> (102)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <arr> (103)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression <expr> (104)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <expr> (105)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <expr> (106)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <expr> (107)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <expr> (108)
        on left: 50 51 52
        on right: 51 52 53 54
    AND_expression <expr> (109)
        on left: 53 54
        on right: 54 55 56
    exclusive_OR_expression <expr> (110)
        on left: 55 56
        on right: 56 57 58
    inclusive_OR_expression <expr> (111)
        on left: 57 58
        on right: 58 59 60
    logical_AND_expression <expr> (112)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression <expr> (113)
        on left: 61 62
        on right: 62 63 64
    conditional_expression <expr> (114)
        on left: 63 64
        on right: 64 67 82
    M <instr_ind> (115)
        on left: 65
        on right: 60 62 64 192 197 198 200 201 202 203 204 205 206 207
    N <statem> (116)
        on left: 66
        on right: 64 197 198 204 205 206 207
    assignment_expression <expr> (117)
        on left: 67 68
        on right: 19 20 68 80 81 135 137 139 140 141 162
    assignment_operator (118)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <expr> (119)
        on left: 80 81
        on right: 4 9 64 81 195 197 198 199 200 201 202 203 204 205 206 207 216
    constant_expression (120)
        on left: 82
        on right: 126 172 186
    declaration (121)
        on left: 83 84
        on right: 193 204 206 221 225 226
    declaration_specifiers (122)
        on left: 85 86 87 88 89 90 91 92
        on right: 83 84 85 87 89 91 157 158 222
    init_declarator_list (123)
        on left: 93 94
        on right: 83 93
    init_declarator <symb> (124)
        on left: 95 96
        on right: 93 94
    storage_class_specifier (125)
        on left: 97 98 99 100
        on right: 85 86
    type_specifier (126)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 87 88 114
    specifier_qualifier_list (127)
        on left: 114 115
        on right: 116 161
    specifier_qualifier_list_opt (128)
        on left: 116 117
        on right: 114 115
    enum_specifier (129)
        on left: 118 119 120
        on right: 113
    identifier_opt (130)
        on left: 121 122
        on right: 118 119
    enumerator_list (131)
        on left: 123 124
        on right: 118 119 124
    enumerator (132)
        on left: 125 126
        on right: 123 124
    type_qualifier (133)
        on left: 127 128 129
        on right: 89 90 115 151 152
    function_specifier (134)
        on left: 130
        on right: 91 92
    declarator <symb> (135)
        on left: 131 132
        on right: 95 96 134 157 222
    direct_declarator <symb> (136)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144 145 146
        on right: 131 132 135 136 137 138 139 140 141 142 143 144 145 146
    type_qualifier_list_opt (137)
        on left: 147 148
        on right: 149 150
    pointer <symbType> (138)
        on left: 149 150
        on right: 131 150
    type_qualifier_list (139)
        on left: 151 152
        on right: 135 136 139 141 142 147 152
    parameter_type_list (140)
        on left: 153 154
        on right: 144
    parameter_list (141)
        on left: 155 156
        on right: 153 154 156
    parameter_declaration (142)
        on left: 157 158
        on right: 155 156
    identifier_list (143)
        on left: 159 160
        on right: 145 160
    type_name (144)
        on left: 161
        on right: 15 16 26 34
    initializer <symb> (145)
        on left: 162 163 164
        on right: 96 165 166
    initializer_list (146)
        on left: 165 166
        on right: 15 16 163 164 166
    designation_opt (147)
        on left: 167 168
        on right: 165 166
    designation (148)
        on left: 169
        on right: 167
    designator_list (149)
        on left: 170 171
        on right: 169 171
    designator (150)
        on left: 172 173
        on right: 170 171
    statement <statem> (151)
        on left: 174 175 176 177 178 179
        on right: 185 186 187 194 197 198 199
    loop_statement <statem> (152)
        on left: 180 181 182 183 184
        on right: 200 202 204 205
    labeled_statement <statem> (153)
        on left: 185 186 187
        on right: 174 180
    compound_statement <statem> (154)
        on left: 188
        on right: 175
    block_item_list_opt <statem> (155)
        on left: 189 190
        on right: 188 201 203 206 207 222
    block_item_list <statem> (156)
        on left: 191 192
        on right: 189 192
    block_item <statem> (157)
        on left: 193 194
        on right: 191 192
    expression_statement <expr> (158)
        on left: 195 196
        on right: 176 181 204 205 206 207
    selection_statement <statem> (159)
        on left: 197 198 199
        on right: 177 182
    iteration_statement <statem> (160)
        on left: 200 201 202 203 204 205 206 207
        on right: 178 183
    F (161)
        on left: 208
        on right: 204 205 206 207
    W (162)
        on left: 209
        on right: 200 201
    D (163)
        on left: 210
        on right: 202 203
    X (164)
        on left: 211
        on right: 188 200 201 204 205 206 207
    change_table (165)
        on left: 212
        on right: 144 146 188 200 201 204 205 206 207 222
    jump_statement <statem> (166)
        on left: 213 214 215 216 217
        on right: 179 184
    translation_unit (167)
        on left: 218 219
        on right: 0 219
    external_declaration (168)
        on left: 220 221
        on right: 218 219
    function_definition (169)
        on left: 222
        on right: 220
    declaration_list_opt (170)
        on left: 223 224
        on right: 222
    declaration_list (171)
        on left: 225 226
        on right: 223 226


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   99 storage_class_specifier: AUTO •

    $default  reduce using rule 99 (storage_class_specifier)


State 2

  118 enum_specifier: ENUM • identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  119               | ENUM • identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  120               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 122 (identifier_opt)

    identifier_opt  go to state 33


State 3

  128 type_qualifier: RESTRICT •

    $default  reduce using rule 128 (type_qualifier)


State 4

  109 type_specifier: UNSIGNED •

    $default  reduce using rule 109 (type_specifier)


State 5

   97 storage_class_specifier: EXTERN •

    $default  reduce using rule 97 (storage_class_specifier)


State 6

  101 type_specifier: VOID •

    $default  reduce using rule 101 (type_specifier)


State 7

  106 type_specifier: FLOAT •

    $default  reduce using rule 106 (type_specifier)


State 8

  103 type_specifier: SHORT •

    $default  reduce using rule 103 (type_specifier)


State 9

  129 type_qualifier: VOLATILE •

    $default  reduce using rule 129 (type_qualifier)


State 10

  102 type_specifier: CHAR •

    $default  reduce using rule 102 (type_specifier)


State 11

  108 type_specifier: SIGNED •

    $default  reduce using rule 108 (type_specifier)


State 12

  127 type_qualifier: CONST •

    $default  reduce using rule 127 (type_qualifier)


State 13

  110 type_specifier: BOOL •

    $default  reduce using rule 110 (type_specifier)


State 14

   98 storage_class_specifier: STATIC •

    $default  reduce using rule 98 (storage_class_specifier)


State 15

  111 type_specifier: COMPLEX •

    $default  reduce using rule 111 (type_specifier)


State 16

  130 function_specifier: INLINE •

    $default  reduce using rule 130 (function_specifier)


State 17

  112 type_specifier: IMAGINARY •

    $default  reduce using rule 112 (type_specifier)


State 18

  104 type_specifier: INT •

    $default  reduce using rule 104 (type_specifier)


State 19

  107 type_specifier: DOUBLE •

    $default  reduce using rule 107 (type_specifier)


State 20

  105 type_specifier: LONG •

    $default  reduce using rule 105 (type_specifier)


State 21

  100 storage_class_specifier: REGISTER •

    $default  reduce using rule 100 (storage_class_specifier)


State 22

  221 external_declaration: declaration •

    $default  reduce using rule 221 (external_declaration)


State 23

   83 declaration: declaration_specifiers • init_declarator_list SEMICOLON
   84            | declaration_specifiers • SEMICOLON
  222 function_definition: declaration_specifiers • declarator declaration_list_opt change_table CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    PARANTHESIS_OPEN  shift, and go to state 34
    ASTERISK          shift, and go to state 35
    SEMICOLON         shift, and go to state 36
    IDENTIFIER        shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   85 declaration_specifiers: storage_class_specifier • declaration_specifiers
   86                       | storage_class_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   87 declaration_specifiers: type_specifier • declaration_specifiers
   88                       | type_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  113 type_specifier: enum_specifier •

    $default  reduce using rule 113 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier • declaration_specifiers
   90                       | type_qualifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   91 declaration_specifiers: function_specifier • declaration_specifiers
   92                       | function_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit • $end
  219 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  218 translation_unit: external_declaration •

    $default  reduce using rule 218 (translation_unit)


State 31

  220 external_declaration: function_definition •

    $default  reduce using rule 220 (external_declaration)


State 32

  120 enum_specifier: ENUM IDENTIFIER •
  121 identifier_opt: IDENTIFIER •

    CURLY_BRACKET_OPEN  reduce using rule 121 (identifier_opt)
    $default            reduce using rule 120 (enum_specifier)


State 33

  118 enum_specifier: ENUM identifier_opt • CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  119               | ENUM identifier_opt • CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 49


State 34

  134 direct_declarator: PARANTHESIS_OPEN • declarator PARANTHESIS_CLOSE

    PARANTHESIS_OPEN  shift, and go to state 34
    ASTERISK          shift, and go to state 35
    IDENTIFIER        shift, and go to state 37

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 35

  149 pointer: ASTERISK • type_qualifier_list_opt
  150        | ASTERISK • type_qualifier_list_opt pointer
